tests/rosetta/transpiler/Elixir/execute-a-system-command.error
run: exit status 1
    warning: variable "seed" is unused (there is a variable with the same name in the context, use the pin operator (^) to match on it or prefix this variable with underscore if it is not meant to be used)
    │
 14 │               seed = v
    │               ~
    │
    └─ /workspace/mochi/tests/rosetta/transpiler/Elixir/execute-a-system-command.exs:14:15: Main._now/0

    warning: variable "seeded" is unused (there is a variable with the same name in the context, use the pin operator (^) to match on it or prefix this variable with underscore if it is not meant to be used)
    │
 15 │               seeded = true
    │               ~
    │
    └─ /workspace/mochi/tests/rosetta/transpiler/Elixir/execute-a-system-command.exs:15:15: Main._now/0

     error: undefined variable "subprocess"
     │
 117 │     out = subprocess.getoutput("ls -l")
     │           ^^^^^^^^^^
     │
     └─ /workspace/mochi/tests/rosetta/transpiler/Elixir/execute-a-system-command.exs:117:11: Main.main/0

** (CompileError) /workspace/mochi/tests/rosetta/transpiler/Elixir/execute-a-system-command.exs: cannot compile module Main (errors have been logged)

